# advent-of-code

./: README.md  pyproject.toml
2018/: .bests  README.md  runner.py
2018/day-1/: .tool-versions  README.md  project.clj  run.sh
2018/day-2/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.asm
2018/day-4/: README.md  main.py  run.sh
2018/day-5/: CMakeLists.txt
2019/: .gitignore  README.md  go.mod  go.sum  runner.go  runner.py
2019/datatypes/: set.go  set_test.go  stack.go  stack_test.go
2019/day1/: day1.go  day1_test.go
2019/day10/: day10.go  day10_test.go
2019/day11/: day11.go  day11_test.go
2019/day12/: day12.go  day12_test.go
2019/day13/: day13.go  day13_test.go
2019/day14/: day14.go  day14_test.go
2019/day15/: day15.go  day15_test.go
2019/day16/: day16.go  day16_test.go
2019/day17/: day17.go
2019/day18/: day18.go
2019/day19/: day19.go  day19_test.go
2019/day2/: day2.go  day2_test.go
2019/day23/: day23.go
2019/day3/: day3.go  day3_test.go
2019/day4/: day4.go  day4_test.go
2019/day5/: day5.go  day5_test.go
2019/day6/: day6.go  day6_test.go
2019/day7/: day7.go  (+1 more)
2020/: .gitignore  Cargo.toml  README.md  run_all.py  runner.py
2020/day-16/: Cargo.toml
2020/day-16/src/: main.rs
2020/day-17/: Cargo.toml
2020/day-17/src/: main.rs
2022/: .bests  README.md  harness.py  pyproject.toml  runner.py
2023/: .tool-versions  AdventOfCode.sln  Directory.Build.props  README.md  build.sh  runner.py
2024/: .gitignore  README.md  mix.exs
2025/: .bests  README.md  build.zig  build.zig.zon
scripts/: update_readmes.py
(+145 files in other folders)
