[package]
name = "day-16"
version = "0.1.0"
authors = ["Jacob Meacham <jacob.e.meacham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
text_io = "0.1.8"
itertools = "0.9.0"