[package]
name = "day-17"
version = "0.1.0"
authors = ["Jacob Meacham <jacob.e.meacham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
multiarray = "0.1.3"
itertools = "0.9.0"
lazy_static = "1.4.0"